# mirl_geometry

./: Cargo.toml  README.md
src/: directions.rs  lib.rs  text_position.rs
src/expressions/: mod.rs
src/expressions/d2/: linear.rs  mod.rs  storage.rs
src/geometry/: mod.rs
src/geometry/d2/: rectangle.rs
src/geometry/d2_old/: circle.rs  mod.rs  rectangle.rs
src/math/: mod.rs  positioning.rs  uniform_range.rs
